--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.5.0
+certifi==2021.10.8
+cloudinary==1.29.0
 distlib==0.3.4
 Django==4.0.3
 filelock==3.6.0
@@ -9,5 +11,6 @@ psycopg2==2.9.3
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
+urllib3==1.26.9
 virtualenv==20.13.3
 whitenoise==6.0.0
