--- a/DenzelProject/requirements.txt
+++ b/DenzelProject/requirements.txt
@@ -13,6 +13,8 @@ Pillow==9.0.1
 platformdirs==2.5.1
 psycopg2==2.9.3
 pyparsing==3.0.8
+python-decouple==3.6
+redis==4.2.2
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
