--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.html linguist-detectable=false
+*.javascript linguist-detectable=false
+*.css linguist-detectable=false
+*.powershell linguist-detectable=false
