--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 asgiref==3.5.0
+async-timeout==4.0.2
+autopep8==1.6.0
 certifi==2021.10.8
 cloudinary==1.29.0
+Deprecated==1.2.13
 Django==4.0.4
+django-redis==5.2.0
 gunicorn==20.1.0
+packaging==21.3
 Pillow==9.1.0
 psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+pyparsing==3.0.8
 python-decouple==3.6
+redis==4.2.2
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 urllib3==1.26.9
 whitenoise==6.0.0
+wrapt==1.14.0
