--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - ./postgresql:/var/lib/postgresql/data
+  redis:    
+    image: redis
+    restart: always
+    ports:
+      - "6379:6379"
+
