--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,33 @@
+amqp==5.1.1
 asgiref==3.5.0
 async-timeout==4.0.2
 autopep8==1.6.0
+billiard==3.6.4.0
+celery==5.2.6
 certifi==2021.10.8
+click==8.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 cloudinary==1.29.0
 Deprecated==1.2.13
 Django==4.0.4
 gunicorn==20.1.0
+kombu==5.2.4
 packaging==21.3
 Pillow==9.1.0
+prompt-toolkit==3.0.29
 psycopg2-binary==2.9.3
 pycodestyle==2.8.0
 pyparsing==3.0.8
 python-decouple==3.6
+pytz==2022.1
 redis==4.2.2
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.9
+vine==5.0.0
+wcwidth==0.2.5
 whitenoise==6.0.0
 wrapt==1.14.0
