--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
 web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
 release: python DenzelProject/manage.py migrate
-celery: celery -A DenzelProject worker --loglevel=info
+celery: celery -A DenzelProject worker --loglevel=INFO
