--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
 web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
 release: python DenzelProject/manage.py migrate
-worker: celery -A DenzelProject worker --loglevel=INFO
+worker: celery worker --app=tasks.app
