--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
 web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
+celery: celery worker -A DenzelProject -l info -c 4
 release: python DenzelProject/manage.py migrate
-worker: celery worker --app=tasks.app
