--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
-web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
+web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi -l debug
 celery: celery worker -A DenzelProject -l info -c 4
 release: python DenzelProject/manage.py migrate
