--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
 web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
-celery: celery -A DenzelProject worker -l info
+worker: celery worker --app=DenzelProject.celery.app
 release: python DenzelProject/manage.py migrate
