--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
 web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
-worker: celery worker --app=DenzelProject.celery.app
+celery: celery -A DenzelProject worker -l info
 release: python DenzelProject/manage.py migrate
