--- a/DenzelProject/Procfile
+++ b/DenzelProject/Procfile
@@ -1,3 +1,3 @@
 web: gunicorn --pythonpath DenzelProject DenzelProject.wsgi
 release: python DenzelProject/manage.py migrate
-worker: celery worker --app=DenzelProject.celery.app
+worker: celery --app=DenzelProject.celerySettings.app worker -l info
