--- a/DenzelProject/requirements.txt
+++ b/DenzelProject/requirements.txt
@@ -13,6 +13,7 @@ cloudinary==1.29.0
 Deprecated==1.2.13
 Django==4.0.4
 gunicorn==20.1.0
+honcho==1.1.0
 kombu==5.2.4
 packaging==21.3
 Pillow==9.1.0
