--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click-repl==0.2.0
 cloudinary==1.29.0
 Deprecated==1.2.13
 Django==4.0.4
+djangorestframework==3.13.1
 gunicorn==20.1.0
 honcho==1.1.0
 kombu==5.2.4
